--- a/index.css
+++ b/index.css
@@ -1,8 +1,109 @@
+@font-face {
+    font-family: Dash-Font;
+    src: url("CursedTimerUlil-Aznm.ttf");
+}
+
 body {
     margin: 0;
+    background-color: #1B244A;
+}
+
+.headings {
+    margin: 0px;
+    padding-top: 15px;
+    padding-left: 8px;
+    padding-bottom: 5px;
+    font-size: 36px;
+    color: #F9FAFB;
 }
 
 .container {
     display: flex;
     justify-content: space-around;
+}
+
+.scorecard {
+    width: 140px;
+    height: 120px;
+    background-color: #080001;
+    border-radius: 5px;
+    border: 2px
+}
+
+.score-text {
+    font-family: Dash-Font;
+    font-size: 90px;
+    margin: 0px;
+    color: #F94F6D;
+    text-align: center;
+    padding-top: 20px;
+    line-height: 90px;
+}
+
+.score-btn-group {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 10px;
+}
+
+.score-btn {
+    width: 37px;
+    height: 37px;
+    border: solid;
+    border-color: #9AABD8;
+    border-radius: 5px;
+    border-width: 2px;
+}
+
+.num {
+    font-family: Dash-Font;
+    font-size: 18px;
+    margin-left: 7px;
+    margin-top: 10px;
+    color: #9AABD8
+}
+
+.new-game-btn {
+    margin: auto;
+    margin-top: 30px;
+    width: 220px;
+    height: 30px;
+    border: solid;
+    border-color: #6EE7B7;
+    border-radius: 5px;
+    border-width: 2px;
+}
+
+.new-game {
+    margin: auto;
+    text-align: center;
+    font-size: 28px;
+    color: #059669;
+}
+
+.fouls {
+    width: 26px;
+    height: 37px;
+    border: solid;
+    border-color: #9AABD8;
+    border-radius: 5px;
+    border-width: 2px;
+}
+
+.timer-box {
+    margin: auto;
+    margin-top: 30px;
+    width: 220px;
+    height: 40px;
+    border: solid;
+    border-color: #FEF3C7;
+    border-radius: 5px;
+    border-width: 2px;
+}
+
+.timer {
+    margin: auto;
+    text-align: center;
+    font-size: 38px;
+    color: #FCD34D;
 }
